# c-iz1

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
.github/workflows/: test.yml
Gtest/: CMakeLists.txt  main.cpp  tests.cpp
src/: CMakeLists.txt
src/song_data/: CMakeLists.txt  song_data.c  song_data.h
src/storage/: CMakeLists.txt  storage.c  storage.h
